--- a/package.json
+++ b/package.json
@@ -1,10 +1,20 @@
 {
   "name": "lambda-server-timing",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "license": "MIT",
   "author": "Nishu Goel <nishu0505@gmail.com>",
   "contributors": [
-    "Nishu Goel (https://github.com/nishugoel)"
+    "Nishu Goel (https://github.com/NishuGoel)"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/NishuGoel/lambda-server-timing.git#main"
+  },
+  "keywords": [
+    "server-timing",
+    "lambda",
+    "serverless",
+    "performance"
   ],
   "main": "lib/cjs/index.js",
   "module": "lib/index.js",
@@ -19,18 +29,33 @@
     "lib/",
     "README.md"
   ],
+  "scripts": {
+    "clean": "rm -rf lib",
+    "build:declarations": "tsc -p tsconfig.json",
+    "build:modules": "cross-env BABEL_ENV=bundled rollup -c rollup.config.js --bundleConfigAsCjs",
+    "build": "npm-run-all -l clean -p build:modules build:declarations",
+    "test": "jest --verbose --detectOpenHandles --forceExit",
+    "lint": "eslint --ext .ts"
+  },
   "devDependencies": {
     "@babel/cli": "^7.23.4",
     "@babel/core": "^7.23.6",
     "@babel/preset-env": "^7.23.6",
     "@babel/preset-typescript": "^7.23.3",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.5",
     "@types/aws-lambda": "^8.10.130",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.10.5",
-    "aws-lambda": "^1.0.7",
     "cross-env": "^7.0.3",
     "jest": "^29.7.0",
+    "jest-junit": "^16.0.0",
     "npm-run-all": "^4.1.5",
+    "rollup": "^4.9.1",
+    "rollup-plugin-sourcemaps": "^0.6.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "tslib": "^2.6.2",
@@ -38,6 +63,7 @@
   },
   "dependencies": {
     "@dazn/lambda-powertools-logger": "^1.28.1",
-    "@middy/core": "^5.1.0"
+    "@middy/core": "^5.1.0",
+    "aws-lambda": "^1.0.7"
   }
 }
