--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,6 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true
   },
-  "include": ["*"],
+  "include": ["**/*"],
   "exclude": ["node_modules", "lib", "**/*.test.ts", "**/__tests__/*"]
 }
