--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lambda-server-timing",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "license": "MIT",
   "author": "Nishu Goel <nishu0505@gmail.com>",
   "contributors": [
@@ -16,57 +16,38 @@
     "serverless",
     "performance"
   ],
-  "main": "lib/cjs/index.js",
-  "module": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "main": "index.js",
+  "types": "index.d.ts",
   "engines": {
     "node": ">=14"
   },
-  "exports": {
-    ".": "./lib"
-  },
   "files": [
-    "lib/",
+    "*.js",
+    "*.map",
+    "*.d.ts",
+    "!*.test.*",
     "README.md"
   ],
   "scripts": {
-    "clean": "rm -rf lib",
     "build:declarations": "tsc -p tsconfig.json",
-    "build:modules": "cross-env BABEL_ENV=bundled rollup -c rollup.config.js --bundleConfigAsCjs",
-    "build": "npm-run-all -l clean -p build:modules build:declarations",
+    "build": "npm-run-all -p build:declarations test lint",
     "test": "jest --verbose --detectOpenHandles --forceExit --passWithNoTests",
-    "lint": "eslint --ext .ts"
+    "lint": "eslint src --ext .ts"
   },
   "devDependencies": {
-    "@babel/cli": "^7.23.4",
-    "@babel/core": "^7.23.6",
-    "@babel/preset-env": "^7.23.6",
-    "@babel/preset-typescript": "^7.23.3",
-    "@rollup/plugin-babel": "^6.0.4",
-    "@rollup/plugin-commonjs": "^25.0.7",
-    "@rollup/plugin-json": "^6.1.0",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-typescript": "^11.1.5",
+    "concurrently": "^6.4.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslintrc": "^1.0.6",
+    "prettier": "^2.5.0",
     "@types/aws-lambda": "^8.10.130",
-    "@types/jest": "^29.5.11",
-    "@types/node": "^20.10.5",
-    "cross-env": "^7.0.3",
     "jest": "^29.7.0",
-    "jest-junit": "^16.0.0",
     "npm-run-all": "^4.1.5",
-    "rollup": "^4.9.1",
-    "rollup-plugin-sourcemaps": "^0.6.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3",
-    "@epilot/eslint-config": "^2.1.0",
-    "@typescript-eslint/eslint-plugin": "^6.16.0",
-    "eslint": "^8.56.0",
-    "eslint-config-standard-with-typescript": "^43.0.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-n": "^16.5.0",
-    "eslint-plugin-promise": "^6.1.1"
+    "@typescript-eslint/eslint-plugin": "^6.16.0"
   },
   "dependencies": {
     "@dazn/lambda-powertools-logger": "^1.28.1",
