chore: adds unit tests and getServerTimings to support non-middy environments

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "declaration": true,
     "sourceMap": true,
     "rootDir": "src",
-    "outDir": ".",
+    "outDir": "lib/cjs",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
