--- a/package.json
+++ b/package.json
@@ -35,19 +35,24 @@
     "lint": "eslint src --ext .ts"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
+    "@types/aws-lambda": "^8.10.130",
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.11.6",
+    "@typescript-eslint/eslint-plugin": "^6.16.0",
+    "babel-jest": "^29.7.0",
     "concurrently": "^6.4.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslintrc": "^1.0.6",
-    "prettier": "^2.5.0",
-    "@types/aws-lambda": "^8.10.130",
     "jest": "^29.7.0",
     "npm-run-all": "^4.1.5",
+    "prettier": "^2.5.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "tslib": "^2.6.2",
-    "typescript": "^5.3.3",
-    "@typescript-eslint/eslint-plugin": "^6.16.0"
+    "typescript": "^5.3.3"
   },
   "dependencies": {
     "@dazn/lambda-powertools-logger": "^1.28.1",
