--- a/package.json
+++ b/package.json
@@ -16,23 +16,23 @@
     "serverless",
     "performance"
   ],
-  "main": "index.js",
-  "types": "index.d.ts",
+  "main": "lib/cjs/index.js",
+  "module": "lib/index.js",
+  "types": "lib/index.d.ts",
   "engines": {
     "node": ">=14"
   },
   "files": [
-    "*.js",
-    "*.map",
-    "*.d.ts",
-    "!*.test.*",
+    "lib",
     "README.md"
   ],
   "scripts": {
+    "clean": "rm -rf lib",
     "build:declarations": "tsc -p tsconfig.json",
-    "build": "npm-run-all -p build:declarations test lint",
-    "test": "jest --verbose --detectOpenHandles --forceExit --passWithNoTests",
-    "lint": "eslint src --ext .ts"
+    "build": "npm-run-all -l -s clean build:declarations lint test check-size",
+    "test": "jest --verbose --detectOpenHandles --forceExit",
+    "lint": "npx -y oxlint@latest && eslint --ext .ts",
+    "check-size": "size-limit"
   },
   "devDependencies": {
     "@babel/core": "^7.23.9",
@@ -47,6 +47,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslintrc": "^1.0.6",
     "jest": "^29.7.0",
+    "@size-limit/file": "^11.0.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.5.0",
     "ts-jest": "^29.1.1",
@@ -54,6 +55,12 @@
     "tslib": "^2.6.2",
     "typescript": "^5.3.3"
   },
+  "size-limit": [
+    {
+      "limit": "2 kB",
+      "path": "lib/cjs/index.js"
+    }
+  ],
   "dependencies": {
     "@dazn/lambda-powertools-logger": "^1.28.1",
     "@middy/core": "^5.1.0",
