--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,6 @@ jobs:
         with:
           registry-url: https://registry.npmjs.org/
       - run: npm ci
-      - run: npm publish --access public --workspaces
+      - run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
