fix: Use @types/aws-lambda instead of aws-lambda
The packages are often confused but `aws-lambda` is actually a mostly-unrelated CLI tool which happens to bring in `aws-sdk` as a dependency (which this package doesn't otherwise need) whereas `@types/aws-lambda` is just the Lambda types for things like events -- as used here.

--- a/package.json
+++ b/package.json
@@ -51,7 +51,6 @@
   },
   "dependencies": {
     "@dazn/lambda-powertools-logger": "^1.28.1",
-    "@middy/core": "^5.1.0",
-    "aws-lambda": "^1.0.7"
+    "@middy/core": "^5.1.0"
   }
 }
